// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectDetailScreen — unit snapshots locks ProjectHeader tree for a managed project with no emoji 1`] = `
<View
  accessibilityLabel="Project: My Detail Project"
  style={
    {
      "backgroundColor": "#212121",
      "borderColor": "rgba(255, 255, 255, 0.10)",
      "borderRadius": 12,
      "borderWidth": 1,
      "flexDirection": "column",
      "gap": 12,
      "padding": 16,
    }
  }
  testID="project-header"
>
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "gap": 12,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "rgba(244, 63, 94, 0.16)",
          "borderColor": "rgba(244, 63, 94, 0.32)",
          "borderRadius": 12,
          "borderWidth": 1,
          "height": 48,
          "justifyContent": "center",
          "width": 48,
        }
      }
    >
      <View
        color="#fda4af"
        size={22}
        testID="icon-folder"
      />
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "flexWrap": "wrap",
            "gap": 6,
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            {
              "color": "#f4f4f4",
              "fontSize": 16,
              "fontWeight": "600",
            }
          }
        >
          My Detail Project
        </Text>
      </View>
      <Text
        numberOfLines={2}
        style={
          {
            "color": "rgba(244, 244, 244, 0.74)",
            "fontSize": 12,
            "marginTop": 2,
          }
        }
      >
        A project rendered in the detail screen.
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
        "flexWrap": "wrap",
        "gap": 6,
      }
    }
  >
    <View
      accessibilityLabel="Privacy: Managed"
      style={
        {
          "alignItems": "center",
          "backgroundColor": "rgba(113, 113, 122, 0.16)",
          "borderColor": "rgba(113, 113, 122, 0.4)",
          "borderRadius": 9999,
          "borderWidth": 1,
          "flexDirection": "row",
          "gap": 4,
          "paddingHorizontal": 8,
          "paddingVertical": 2,
        }
      }
      testID="project-header-privacy-chip"
    >
      <View
        color="#e4e4e7"
        size={11}
        testID="icon-cloud"
      />
      <Text
        style={
          {
            "color": "#e4e4e7",
            "fontSize": 11,
            "fontWeight": "500",
          }
        }
      >
        Managed
      </Text>
    </View>
    <View
      accessibilityLabel="Provider mode: ManagedGateway"
      style={
        {
          "backgroundColor": "rgba(56, 189, 248, 0.16)",
          "borderColor": "rgba(56, 189, 248, 0.32)",
          "borderRadius": 9999,
          "borderWidth": 1,
          "paddingHorizontal": 8,
          "paddingVertical": 2,
        }
      }
      testID="project-header-provider-chip"
    >
      <Text
        style={
          {
            "color": "#7dd3fc",
            "fontSize": 11,
            "fontWeight": "500",
          }
        }
      >
        Managed Gateway
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "columnGap": 12,
        "flexDirection": "row",
        "flexWrap": "wrap",
        "rowGap": 4,
      }
    }
    testID="project-header-meta-row"
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
        }
      }
    >
      <View
        color="rgba(244, 244, 244, 0.48)"
        size={11}
        testID="icon-users"
      />
      <Text
        style={
          {
            "color": "rgba(244, 244, 244, 0.48)",
            "fontSize": 11,
          }
        }
      >
        3 files
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
        }
      }
    >
      <Text
        style={
          {
            "color": "rgba(244, 244, 244, 0.48)",
            "fontSize": 11,
          }
        }
      >
        2 members
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
        "flexWrap": "wrap",
        "gap": 4,
      }
    }
    testID="project-header-surface-chips"
  >
    <View
      style={
        {
          "backgroundColor": "#2a2a2a",
          "borderColor": "rgba(255, 255, 255, 0.10)",
          "borderRadius": 4,
          "borderWidth": 1,
          "paddingHorizontal": 6,
          "paddingVertical": 2,
        }
      }
    >
      <Text
        style={
          {
            "color": "rgba(244, 244, 244, 0.74)",
            "fontSize": 10,
            "fontWeight": "500",
            "letterSpacing": 0.4,
            "textTransform": "uppercase",
          }
        }
      >
        Web
      </Text>
    </View>
    <View
      style={
        {
          "backgroundColor": "#2a2a2a",
          "borderColor": "rgba(255, 255, 255, 0.10)",
          "borderRadius": 4,
          "borderWidth": 1,
          "paddingHorizontal": 6,
          "paddingVertical": 2,
        }
      }
    >
      <Text
        style={
          {
            "color": "rgba(244, 244, 244, 0.74)",
            "fontSize": 10,
            "fontWeight": "500",
            "letterSpacing": 0.4,
            "textTransform": "uppercase",
          }
        }
      >
        Desktop
      </Text>
    </View>
    <View
      style={
        {
          "backgroundColor": "#2a2a2a",
          "borderColor": "rgba(255, 255, 255, 0.10)",
          "borderRadius": 4,
          "borderWidth": 1,
          "paddingHorizontal": 6,
          "paddingVertical": 2,
        }
      }
    >
      <Text
        style={
          {
            "color": "rgba(244, 244, 244, 0.74)",
            "fontSize": 10,
            "fontWeight": "500",
            "letterSpacing": 0.4,
            "textTransform": "uppercase",
          }
        }
      >
        Mobile
      </Text>
    </View>
  </View>
</View>
`;

exports[`ProjectDetailScreen — unit snapshots locks ProjectHeader tree for a sky-accent local project with last-used label 1`] = `
<View
  accessibilityLabel="Project: My Detail Project"
  style={
    {
      "backgroundColor": "#212121",
      "borderColor": "rgba(255, 255, 255, 0.10)",
      "borderRadius": 12,
      "borderWidth": 1,
      "flexDirection": "column",
      "gap": 12,
      "padding": 16,
    }
  }
  testID="project-header"
>
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "gap": 12,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "rgba(56, 189, 248, 0.16)",
          "borderColor": "rgba(56, 189, 248, 0.32)",
          "borderRadius": 12,
          "borderWidth": 1,
          "height": 48,
          "justifyContent": "center",
          "width": 48,
        }
      }
    >
      <Text
        style={
          {
            "color": "#7dd3fc",
            "fontSize": 22,
          }
        }
      >
        🗂
      </Text>
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "flexWrap": "wrap",
            "gap": 6,
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            {
              "color": "#f4f4f4",
              "fontSize": 16,
              "fontWeight": "600",
            }
          }
        >
          My Detail Project
        </Text>
      </View>
      <Text
        numberOfLines={2}
        style={
          {
            "color": "rgba(244, 244, 244, 0.74)",
            "fontSize": 12,
            "marginTop": 2,
          }
        }
      >
        A project rendered in the detail screen.
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
        "flexWrap": "wrap",
        "gap": 6,
      }
    }
  >
    <View
      accessibilityLabel="Privacy: Local"
      style={
        {
          "alignItems": "center",
          "backgroundColor": "rgba(16, 185, 129, 0.12)",
          "borderColor": "rgba(16, 185, 129, 0.4)",
          "borderRadius": 9999,
          "borderWidth": 1,
          "flexDirection": "row",
          "gap": 4,
          "paddingHorizontal": 8,
          "paddingVertical": 2,
        }
      }
      testID="project-header-privacy-chip"
    >
      <View
        color="#6ee7b7"
        size={11}
        testID="icon-lock"
      />
      <Text
        style={
          {
            "color": "#6ee7b7",
            "fontSize": 11,
            "fontWeight": "500",
          }
        }
      >
        Local
      </Text>
    </View>
    <View
      accessibilityLabel="Provider mode: Local"
      style={
        {
          "backgroundColor": "rgba(16, 185, 129, 0.16)",
          "borderColor": "rgba(16, 185, 129, 0.32)",
          "borderRadius": 9999,
          "borderWidth": 1,
          "paddingHorizontal": 8,
          "paddingVertical": 2,
        }
      }
      testID="project-header-provider-chip"
    >
      <Text
        style={
          {
            "color": "#6ee7b7",
            "fontSize": 11,
            "fontWeight": "500",
          }
        }
      >
        Local
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "columnGap": 12,
        "flexDirection": "row",
        "flexWrap": "wrap",
        "rowGap": 4,
      }
    }
    testID="project-header-meta-row"
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
        }
      }
    >
      <View
        color="rgba(244, 244, 244, 0.48)"
        size={11}
        testID="icon-users"
      />
      <Text
        style={
          {
            "color": "rgba(244, 244, 244, 0.48)",
            "fontSize": 11,
          }
        }
      >
        3 files
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
        }
      }
    >
      <Text
        style={
          {
            "color": "rgba(244, 244, 244, 0.48)",
            "fontSize": 11,
          }
        }
      >
        2 members
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 4,
        }
      }
    >
      <Text
        style={
          {
            "color": "rgba(244, 244, 244, 0.48)",
            "fontSize": 11,
          }
        }
      >
        Last used 3h ago
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
        "flexWrap": "wrap",
        "gap": 4,
      }
    }
    testID="project-header-surface-chips"
  >
    <View
      style={
        {
          "backgroundColor": "#2a2a2a",
          "borderColor": "rgba(255, 255, 255, 0.10)",
          "borderRadius": 4,
          "borderWidth": 1,
          "paddingHorizontal": 6,
          "paddingVertical": 2,
        }
      }
    >
      <Text
        style={
          {
            "color": "rgba(244, 244, 244, 0.74)",
            "fontSize": 10,
            "fontWeight": "500",
            "letterSpacing": 0.4,
            "textTransform": "uppercase",
          }
        }
      >
        Web
      </Text>
    </View>
    <View
      style={
        {
          "backgroundColor": "#2a2a2a",
          "borderColor": "rgba(255, 255, 255, 0.10)",
          "borderRadius": 4,
          "borderWidth": 1,
          "paddingHorizontal": 6,
          "paddingVertical": 2,
        }
      }
    >
      <Text
        style={
          {
            "color": "rgba(244, 244, 244, 0.74)",
            "fontSize": 10,
            "fontWeight": "500",
            "letterSpacing": 0.4,
            "textTransform": "uppercase",
          }
        }
      >
        Desktop
      </Text>
    </View>
    <View
      style={
        {
          "backgroundColor": "#2a2a2a",
          "borderColor": "rgba(255, 255, 255, 0.10)",
          "borderRadius": 4,
          "borderWidth": 1,
          "paddingHorizontal": 6,
          "paddingVertical": 2,
        }
      }
    >
      <Text
        style={
          {
            "color": "rgba(244, 244, 244, 0.74)",
            "fontSize": 10,
            "fontWeight": "500",
            "letterSpacing": 0.4,
            "textTransform": "uppercase",
          }
        }
      >
        Mobile
      </Text>
    </View>
  </View>
</View>
`;

exports[`ProjectDetailScreen — unit snapshots locks local-only fallback container shape 1`] = `
<View
  testID="project-detail-local-fallback"
>
  <Text>
    proj_detail_test
  </Text>
  <Text>
    local_only — project details sync when you join Cloud.
  </Text>
</View>
`;
